hphp/hack/test/typecheck/const_attribute/static/unset_const_prop.php.like_types.exp
File "unset_const_prop.php", line 26, characters 3-19:
In strict mode, unset is banned except on array, keyset, or dict indexing (Typing[4135])
File "unset_const_prop.php", line 4, characters 17-33:
This is a dynamic value or an object of type dict<int, string> because it is an unenforceable type
File "unset_const_prop.php", line 27, characters 3-20:
In strict mode, unset is banned except on array, keyset, or dict indexing (Typing[4135])
File "unset_const_prop.php", line 6, characters 17-33:
This is a dynamic value or an object of type dict<int, string> because it is an unenforceable type
File "unset_const_prop.php", line 28, characters 3-32:
In strict mode, unset is banned except on array, keyset, or dict indexing (Typing[4135])
File "unset_const_prop.php", line 29, characters 3-25:
In strict mode, unset is banned except on array, keyset, or dict indexing (Typing[4135])
File "unset_const_prop.php", line 10, characters 17-44:
This is a dynamic value or an object of type dict<int, string> because it is an unenforceable type
File "unset_const_prop.php", line 27, characters 12-15:
Cannot mutate a __Const property (Typing[4196])
File "unset_const_prop.php", line 28, characters 12-15:
Cannot mutate a __Const property (Typing[4196])
File "unset_const_prop.php", line 28, characters 24-27:
Cannot mutate a __Const property (Typing[4196])
File "unset_const_prop.php", line 29, characters 12-16:
Cannot mutate a __Const property (Typing[4196])
File "unset_const_prop.php", line 33, characters 3-19:
In strict mode, unset is banned except on array, keyset, or dict indexing (Typing[4135])
File "unset_const_prop.php", line 4, characters 17-33:
This is a dynamic value or an object of type dict<int, string> because it is an unenforceable type
File "unset_const_prop.php", line 34, characters 3-20:
In strict mode, unset is banned except on array, keyset, or dict indexing (Typing[4135])
File "unset_const_prop.php", line 6, characters 17-33:
This is a dynamic value or an object of type dict<int, string> because it is an unenforceable type
File "unset_const_prop.php", line 33, characters 9-14:
Cannot access static properties on reified generics (Typing[4346])
File "unset_const_prop.php", line 34, characters 12-15:
Cannot mutate a __Const property (Typing[4196])
File "unset_const_prop.php", line 34, characters 9-15:
Cannot access static properties on reified generics (Typing[4346])
File "unset_const_prop.php", line 17, characters 5-27:
In strict mode, unset is banned except on array, keyset, or dict indexing (Typing[4135])
File "unset_const_prop.php", line 6, characters 17-33:
This is a dynamic value or an object of type dict<int, string> because it is an unenforceable type
File "unset_const_prop.php", line 18, characters 5-24:
In strict mode, unset is banned except on array, keyset, or dict indexing (Typing[4135])
File "unset_const_prop.php", line 8, characters 10-26:
This is a dynamic value or an object of type dict<int, string> because it is an unenforceable type
File "unset_const_prop.php", line 19, characters 5-26:
In strict mode, unset is banned except on array, keyset, or dict indexing (Typing[4135])
File "unset_const_prop.php", line 4, characters 17-33:
This is a dynamic value or an object of type dict<int, string> because it is an unenforceable type
File "unset_const_prop.php", line 20, characters 5-39:
In strict mode, unset is banned except on array, keyset, or dict indexing (Typing[4135])
File "unset_const_prop.php", line 4, characters 17-33:
This is a dynamic value or an object of type dict<int, string> because it is an unenforceable type
File "unset_const_prop.php", line 17, characters 19-22:
Cannot mutate a __Const property (Typing[4196])
File "unset_const_prop.php", line 18, characters 18-19:
Cannot mutate a __Const property (Typing[4196])
